--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,81 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-color: rgb(133, 128, 128);
+  background-color: rgb(179, 83, 195);
+}
+.contetn{
+  width: 70%;
+  height: 200px;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 15px;
+  margin-top: 150px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  padding: 0 30px;
+  display: flex;
+}
+.options-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 200px;
+}
+.options{
+  display: flex;
+  align-items: center;
+}
+.options span{
+  font-size: 22px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  color: #585858;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:  #f0f0f0;
+  margin-right: 16px;
+}
+.option-btn{
+  color: #585858;
+  font-size: 22px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+.inner-box{
+  position: relative;
+  padding: 30px 0;
+}
+.inner-text{
+  font-size: 22px;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+.inner-btn{
+  cursor: pointer;
+  font-size: 22px;
+  background-color: #f0f0f0;
+  padding: 16px 22px;
+  border: none;
+  border-radius: 10px;
+}
+.inner-one{
+  position: absolute;
+}
+.inner-two{
+  position: absolute;
+  display: none;
+}
+.inner-three{
+  position: absolute;
+  display: none;
+}
+.inner-four{
+  position: absolute;
+  display: none;
+}
+.option-btn:focus{
+  color: #000;
+  font-weight: 600;
 }
